# SysCore

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
benchmarks/: .gitkeep  mmap_latency.c  pipe_latency.c  semaphore_latency.c  thread_latency.c
docs/: API.md  Architecture.md  Build.md  Examples.md  Performance.md  Portability.md  Roadmap.md
examples/ipc/: anonymous_pipe.c  message_queue_demo.c  message_queue_priority.c  named_fifo.c  producer_consumer_mq.c
examples/memory/: mmap_anonymous_demo.c  mmap_file_demo.c  mmap_shared_demo.c  shared_counter.c  shared_memory_demo.c
examples/process/: basic_fork.c
examples/sync/: condition_variable.c  mutex_demo.c  named_semaphore_demo.c  producer_consumer.c  read_write_lock.c  semaphore_demo.c
examples/threading/: basic_thread.c  multiple_threads.c  thread_arguments.c
include/common/: errors.h  logging.h  utils.h  version.h
include/memory/: mmap.h  shared_memory.h
include/process/: process.h
include/sync/: sync.h
include/threading/: threading.h
install/include/common/: config.h  version.h
install/include/ipc/: ipc.h  message_queue.h
install/include/sync/: semaphore.h
install/lib/cmake/SysCore/: SysCoreConfig.cmake  SysCoreTargets-noconfig.cmake  SysCoreTargets.cmake
src/: main.c
src/common/: errors.c  logging.c  version.c
src/ipc/: ipc.c  message_queue.c
src/memory/: mmap.c  shared_memory.c
src/process/: process.c
src/sync/: semaphore.c  sync.c
src/threading/: threading.c
tests/: test_common.c  test_helpers.h  test_ipc.c  test_memory.c  test_mmap.c  test_mq.c  test_process.c  test_semaphore.c  test_sync.c  test_threading.c
